Fixed DTO of File & Room Mappers